# doctor-playwright

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: monitor.yml
src/: browser.py  checker.py
tests/: test_checker.py
tools/: send_test_email.py  update_state_and_notify.py
