[tool.poetry]
name = "doctor-playwright"
version = "0.1.0"
description = "A project to check doctor availability using Playwright."
authors = ["Your Name <your_email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
playwright = "^1.0.0"
smtplib = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"